<resources>
    <string name="app_name">Audiobook Canvas</string>
    
    <!-- 3 Dot menu item names -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    
    <!-- Floating action button menu -->
    <string name="action_import">Import new text file</string>
    <string name="action_edit_proj">Edit audiobook</string>
    
    <!-- Fragment labels -->
    <string name="project_list_fragment_label">Audiobook Projects</string>
    <string name="project_setup_fragment_label">Project Setup</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="character_settings_fragment_label">Characters</string>
    
    <!-- Get Started screen UI element labels -->
    <string name="welcome_text">Create a new audio book audiobookProject from a .txt file with the text of your book, or edit an already created audiobookProject</string>
    
    
    <!-- Preference Titles -->
    <string name="app_preferences_header">App preferences</string>
    
    <!-- Application Preferences -->
    <string name="skip_get_started_title">Skip the \"Get Started\" screen</string>
    <string name="skip_get_started_summary_off">The \"Get Started\" screen will be shown on application start</string>
    <string name="skip_get_started_summary_on">The \"Select File\" screen will be shown on application start</string>
    <string name="skip_get_started_summary">Toggles whether the \"Get Started\" screen will be shown on application start</string>
    <string name="list_characters">List characters</string>
    <string name="default_project_name">newAudiobookProject</string>
    <string name="openai_api_key_summary">Paste your OpenAI API key here</string>
    <string name="openai_api_key">OpenAI API Key</string>
    <string name="use_high_quality_voices_title">Use high-quality voices</string>
    <string name="use_high_quality_voices_summary">Toggle between offline and network voices</string>
    <string name="use_high_quality_voices_summary_off">Using built-in Android offline voices. No internet connection needed.</string>
    <string name="use_high_quality_voices_summary_on">Using network high-quality voices. Internet connection required.</string>
    <string name="network_voice_provider_title">Network voice provider</string>
    <string name="network_voice_provider_summary">Pick the provider for high-quality voices</string>
    <string name="network_voice_provider_option_openai">OpenAI</string>
    <string name="network_voice_provider_option_elevenlabs">Elevenlabs</string>
    <string name="named_entity_recognition_prompt">Perform Named Entity Recognition on the following text fragment.\n
This symbol always marks the start of a dialogue line: \"“\".\n
This symbol always marks the end of a dialogue line: \"”\".\n
Narration lines never start with the symbol for the start of a dialogue line. If a line does not start with the "“" symbol, this means it is a narration line.\n
Narration lines are always read by the Narrator character. They are never read by any other character.\n
Dialogue lines are always read by a character, different than the Narrator.\n
If you see a dialogue line, but cannot infer the character\'s name from the context of the rest of the text, use "Unknown" as the name of the character, and don\'t add a gender.\n
Each dialogue or narration line always starts on a new line.\n
Mark the name and gender of each character at the start of his or her dialogue line. Mark narration lines with the Narrator character. Your response needs to be well-formed JSON. The "character attribute contains the name of the character. The "gender" attribute contains the character's gender. The Narrator doesn't have a "gender" attribute. The "text" attribute contains a copy of the corresponding text line from the input. Here are two examples of the format you need to use:\n
[Input]\nHis face was impassive, but more lined than Arthas remembered. His eyes, however, burned with righteous fury.\n“The dog returns to his vomit,”\nUther said, the words cracking like a whip.\n“I’d prayed you’d stay away.”\nArthas twitched slightly. His voice was rough as he replied,\n“I’m a bad copper—I just keep turning up. I see you still call yourself a paladin, even though I dissolved your order.”\nUther actually laughed, though it was bitter laughter.\n“As if you could dissolve it yourself. I answer to the Light, boy. So did you, once.”\n
[Output]
{\"characterLines\":[
{\"character\":\"Narrator\",\"text\":\"His face was impassive, but more lined than Arthas remembered. His eyes, however, burned with righteous fury.\"},
{\"character\":\"Uther\",\"gender\":\"male\",\"text\":\"“The dog returns to his vomit,”\"},
{\"character\":\"Narrator\",\"text\":\" Uther said, the words cracking like a whip.\"},
{\"character\":\"Uther\",\"gender\":\"male\",\"text\":\"“I’d prayed you’d stay away.”\"},
{\"character\":\"Narrator\",\"text\":\"Arthas twitched slightly. His voice was rough as he replied, \"},
{\"character\":\"Arthas\",\"gender\":\"male\",\"text\":\"“I’m a bad copper—I just keep turning up. I see you still call yourself a paladin, even though I dissolved your order.”\"},
{\"character\":\"Narrator\",\"text\":\"Uther actually laughed, though it was bitter laughter.\"},
{\"character\":\"Uther\",\"gender\":\"male\",\"text\":\"“As if you could dissolve it yourself. I answer to the Light, boy. So did you, once.”\"}]}\n\n
[Input]\nWorld of WarCraft: Arthas: Rise of the Lich King PROLOGUE: THE DREAMING A table, long and heavy and carved, occupied most of the space in the room. It could have hosted three dozen easily. Only three figures sat at the table now: a man, an orc, and a boy.None of it was real, of course. The man who sat at the table understood this. He was dreaming; he had been dreaming.”\n
[Output]
{\"characterLines\":[
{\"character\":\"Narrator\",\"text\":\"World of WarCraft: Arthas: Rise of the Lich King PROLOGUE: THE DREAMING A table, long and heavy and carved, occupied most of the space in the room. It could have hosted three dozen easily. Only three figures sat at the table now: a man, an orc, and a boy.None of it was real, of course. The man who sat at the table understood this. He was dreaming; he had been dreaming.\"},]}\n
[Input]\n</string>
    <string name="enter_project_name">Audiobook audiobookProject name</string>
    <string name="xmlProjectFileVersion">1.0.0</string>
    <string name="defaultAudiobookProjName">New Project</string>
    <string name="defaultAudiobookTitle">New Audiobook</string>
    <string name="action_save_project">Save</string>
    <string name="project_name_label">Project name:</string>
    <string name="proj_file_version_label">Project file version:</string>
    <string name="no_text_file_selected_label">No Text File Selected</string>
    <string name="select_file_btn_label">Select txt file</string>
    <string name="book_name_label">Book Name:</string>
    <string name="author_name_label">Author Name:</string>
    <string name="project_description_label">Description:</string>
    <string name="export_as_xml_file_label">XML file name for export:</string>
    <string name="last_edited_on_label">Last edited on:</string>
    <string name="last_processed_block_label">Last processed text block:</string>
    <string name="percent_completed_label">Percent of book text processed:</string>
    <string name="pick_voices_label">Change Voices</string>
    <string name="start_processing_btn_label">Start Processing</string>
    <string name="continue_processing_btn_label">Continue processing</string>
    <string name="edit_project_title">Edit Project</string>
    <string name="menu_item_about">About</string>
    <string name="no_permission_to_open_txt_file">No permission to read external storage. Please, provide permissions to read files from the external storage in your phone\'s app settings.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">Audiobook Canvas\nVersion 1.0.0</string>
    <string name="project_info_label">Project information</string>
    <string name="created_on_label">Project created on:</string>
    <string name="device_info_label">Device information</string>
    <string name="app_version_label">Application version:</string>
    <string name="os_version_label">Android version:</string>
    <string name="device_name_label">Device name:</string>
    <string name="book_name_hint">Read at start of audiobook</string>
    <string name="author_name_hint">Read at start of audiobook</string>
    <string name="description_hint">You can add a description</string>
    <string name="new_project_fragment_label">New Audiobook</string>
    <string name="text_preparation_fragment_title">Preparing Text File</string>
    <string name="change_txt_file_btn_label">Change file</string>
    <string name="action_delete_project">Delete</string>
    <string name="open_audiobook_btn_label">Open Audiobook</string>
    <string name="openai_completions_endpoint">https://api.openai.com/v1/chat/completions</string>
    <string name="openai_speech_endpoint">https://api.openai.com/v1/audio/speech</string>
    <string name="loading_text_loading_file">Loading file...</string>
    <string name="loading_text_splitting_file">Splitting into pages...</string>
    <string name="loading_text_saved_loading_from_database">Text blocks saved. Loading...</string>
    <string name="character_lines_fragment_label">Character Lines</string>
    <string name="enqueue_blocks_btn">Start processing</string>
    <string name="stop_processing_btn">Stop processing</string>
    <string name="retry_errors_btn_label">Retry errors</string>
    <string name="generate_audio_btn_label">Generate audio</string>
    <string name="add_api_key_text">Please, add your OpenAI API key in the Settings menu (tap the three dots in the top right)</string>
    <string name="btn_preview_label">Preview</string>

</resources>