<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_preferences_header">

        <SwitchPreferenceCompat
            app:key="skipGetStarted"
            app:persistent="true"
            app:summary="@string/skip_get_started_summary"
            app:summaryOff="@string/skip_get_started_summary_off"
            app:summaryOn="@string/skip_get_started_summary_on"
            app:title="@string/skip_get_started_title" />
        <EditTextPreference
            android:key="openai_API_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/openai_api_key"
            app:summary="@string/openai_api_key_summary" />
        <SwitchPreferenceCompat
            app:key="useHighQualityVoices"
            app:persistent="true"
            app:summary="@string/use_high_quality_voices_summary"
            app:summaryOff="@string/use_high_quality_voices_summary_off"
            app:summaryOn="@string/use_high_quality_voices_summary_on"
            app:title="@string/use_high_quality_voices_title" />

    </PreferenceCategory>

</PreferenceScreen>