<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.NewProjectFragment">
    
    <ScrollView
        android:id="@+id/projSetupScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <RelativeLayout
                android:id="@+id/projectNameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <TextView
                    android:id="@+id/projNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/projName"
                    android:text="@string/project_name_label" />
                
                <EditText
                    android:id="@+id/projName"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="" />
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/textFileLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    
                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
                
                <TextView
                    android:id="@+id/textFilePath"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/textFileBtn"
                    android:clickable="false"
                    android:contextClickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:text="@string/no_text_file_selected_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                
                <Button
                    android:id="@+id/textFileBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/select_file_btn_label" />
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/bookNameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone">
    
                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
        
                <TextView
                    android:id="@+id/bookNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/bookName"
                    android:text="@string/book_name_label" />
        
                <EditText
                    android:id="@+id/bookName"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:hint="@string/book_name_hint"
                    android:inputType="text"
                    android:text="" />
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/authorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone">
    
                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
        
                <TextView
                    android:id="@+id/authorNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/authorName"
                    android:text="@string/author_name_label" />
        
                <EditText
                    android:id="@+id/authorName"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:hint="@string/author_name_hint"
                    android:inputType="text"
                    android:text="" />
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
    
                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />
        
                <TextView
                    android:id="@+id/descriptionTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/descriptionText"
                    android:text="@string/project_description_label" />
        
                <EditText
                    android:id="@+id/descriptionText"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:hint="@string/description_hint"
                    android:inputType="text"
                    android:text="" />
            </RelativeLayout>
    
            <View
                android:id="@+id/dividerFinal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    
                <Button
                    android:id="@+id/processTxtBlockBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/start_processing_btn_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>